2007-01-10  Michael Goffioul  <michael.goffioul@swing.be>

	* DLD-FUNCTIONS/getrusage.cc: Use #ifdef __WIN32__, not __MINGW32__.

2007-01-10  John W. Eaton  <jwe@octave.org>

	* parse.y (load_fcn_from_file): Only compare last two characters
	when looking for ".m".

2007-01-06  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_CONFIG_STATEMENT): New macro
	(OCTAVE_NAME_AND_VERSION): Remove config info.
	(OCTAVE_NAME_VERSION_COPYRIGHT_COPYING_AND_WARRANTY):
	Use OCTAVE_CONFIG_STATEMENT here.

2007-01-05  David Bateman  <dbateman@free.fr>

	* Makefile.in (DLD_XSRC): Add fftw.cc and remove fftw_wisdom.cc
	* DLD-FUNCTIONS/fftw.cc: New file.
	* DLD-FUNCTIONS/fftw_wisdom.cc: Delete.
	* defaults.cc (Vfftw_wisdom_program): Delete variable.
	(set_default_fftw_wisdom_prog): Delete function that sets it.
	(install_defaults): Delete set_default_fftw_prog from defaults.
	(Ffftw_wisdom_program): Delete.

2007-01-04  David Bateman  <dbateman@free.fr>

	* ov-fcn-handle.cc (octave_fcn_handle::load_ascii,
	octave_fcn_handle::load_binary):
	Throw error if handle can't be created.

2007-01-04  Luis F. Ortiz  <lortiz@interactivesupercomputing.com>

	* mex.cc (mxArray_number::mxArray_number (int, const char **)):
	Correctly index LHS in assignment.

2007-01-03  John W. Eaton  <jwe@octave.org>

	* data.cc (Fisinteger): New function.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::is_integer_type,
	OCTAVE_VALUE_INT_SCALAR_T::is_integer_type): New function.
	* ov.h (octave_value::is_integer_type): New function.
	* ov-base.h (octave_base_value::is_integer_type): New virtual function.

2007-01-03  Michael Goffioul  <michael.goffioul@swing.be>

	* toplev.cc (Fsystem): Handle async calls on Windows systems.

2007-01-03  David Bateman  <dbateman@free.fr>

	* (OPERATORS/op-cm-scm.cc, OPERATORS/op-cm-sm.cc, 
	OPERATORS/op-cs-scm.cc, OPERATORS/op-cs-sm.cc, 
	OPERATORS/op-m-scm.cc, OPERATORS/op-m-sm.cc, 
	OPERATORS/op-scm-cm.cc, OPERATORS/op-scm-cs.cc, 
	OPERATORS/op-scm-m.cc, OPERATORS/op-scm-s.cc, 