@@ -1,3 +1,8 @@
+2007-01-10  Luis F. Ortiz  <lortiz@interactivesupercomputing.com>
+
+	* parse.y (load_fcn_from_file): Delete unused variable NAMES.
+	If NM is absolute, strip directory and extension parts.
+
 2007-01-10  Michael Goffioul  <michael.goffioul@swing.be>
 
 	* DLD-FUNCTIONS/getrusage.cc: Use #ifdef __WIN32__, not __MINGW32__.
